<resources>
    <string name="app_name">Travel Consumption</string>
    <string name="total_kilometers">Total Kilometers</string>
    <string name="price_per_liter">Price per Liter</string>
    <string name="kilometer_per_liter">Kilometers per Liter</string>
    <string name="total_cost">Total Cost</string>
    <string name="calculate">Calculate</string>
    <string name="zero_total_kilometers">0 km</string>
    <string name="price_zero">R$ 0,00</string>
    <string name="zero_kilometer_per_liter">0 km</string>
    <string name="total_cost_price">R$ %s</string>
    <string name="incomplete_edits">Please enter valid numeric values</string>
</resources>